# sauce

./: .gitignore  pyproject.toml
src/sauce/: __init__.py  cli.py  config.py  dynamic.py  render.py  switch.py  tui.py
src/sauce/apps/: __init__.py  gtk.py  spicetify.py  vscodium.py
src/sauce/data/: registry.toml
src/sauce/data/palettes/: automne.json  catppuccin.json  ete.json  gruvbox.json  hiver.json  nord.json  printemps.json
src/sauce/data/templates/gtk/: colors.css
src/sauce/data/templates/gtk-m3/: colors.css
src/sauce/data/templates/hyprland/: colors.conf
src/sauce/data/templates/kitty/: colors.conf
src/sauce/data/templates/kvantum/: kvantum.kvconfig  themr-generated.kvconfig
src/sauce/data/templates/omp/: theme.omp.json
src/sauce/data/templates/pywalfox/: colors.json
src/sauce/data/templates/quickshell/: palette.qml
src/sauce/data/templates/rofi/: colors.rasi
src/sauce/data/templates/spicetify/: color.ini  user.css
src/sauce/data/templates/thunderbird/: theme-palette.css
src/sauce/data/templates/vesktop/: generated-palette.css
src/sauce/data/templates/vscodium/: settings-fragment.json
src/sauce/gui/: __init__.py  app.py  color_editor.py  color_row.py  palette_list.py  preview.py  stylesheet.py  window.py
tests/: conftest.py  test_dynamic.py  test_m3.py  test_smoke.py  test_tui.py
tests/fixtures/: registry.toml
tests/fixtures/palettes/: test.json
