[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sauce"
version = "2.0.0"
description = "Registry-driven desktop theming engine for Linux"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
gui = ["PySide6>=6.7"]
tui = ["textual>=0.50"]
dev = ["pytest>=8.0", "pytest-mock>=3.0"]

[project.scripts]
sauce                    = "sauce.cli:main"
sauce-vscodium-apply     = "sauce.apps.vscodium:main"
sauce-spicetify-apply    = "sauce.apps.spicetify:main"
sauce-gtk-settings-apply = "sauce.apps.gtk:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sauce"]

[tool.pytest.ini_options]
testpaths = ["tests"]
